obtener roles con paginacion y ajustes en usuarios
